<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black_22">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:src="@drawable/logo"
                android:layout_marginStart="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/teleButton"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:clickable="true"
                        android:foreground="?attr/selectableItemBackground">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/placeholder"
                            android:scaleType="centerCrop"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#80000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/television_title"
                            android:textColor="@color/white"
                            android:layout_gravity="bottom"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/placeholder"
                            android:scaleType="centerCrop"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#80000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/films_title"
                            android:textColor="@color/white"
                            android:layout_gravity="bottom"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="20dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/placeholder"
                            android:scaleType="centerCrop"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#80000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/serials_title"
                            android:textColor="@color/white"
                            android:layout_gravity="bottom"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="20dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/placeholder"
                            android:scaleType="centerCrop"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#80000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/children_title"
                            android:textColor="@color/white"
                            android:layout_gravity="bottom"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp"
                        android:layout_marginStart="10dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/placeholder"
                            android:scaleType="centerCrop"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#80000000"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/football_title"
                            android:textColor="@color/white"
                            android:layout_gravity="bottom"
                            android:layout_margin="10dp"/>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>